# property-investment-analyzer

./: .coderabbit.yaml  .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .super-linter.env  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  environment.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  authorized-users.txt  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: config.yml  investment-analysis.yml  monthly-report.yml  sub-task.yml
.github/agents/: 00-orchestrator.md  01-market-research.md  02-plot-analysis.md  03-build-cost.md  04-financing.md  05-risk.md  06-partnership.md  07-optimizer.md  99-eval.md  meta-template-generator.md
.github/linters/: .markdown-lint.yml
.github/workflows/: eval.yml  lint.yml  run-analysis.yml  super-linter.yml  tests.yml
agents/: 00-orchestrator.md  02-plot-analysis.md  03-build-cost.md  04-financing.md  06-partnership.md  99-eval.md  meta-template-generator.md
analyses/issue-2/: final-report.md
analyses/issue-2/agent-outputs/: 01-market-research.md  02-plot-analysis.md  03-build-cost.md  04-financing.md  05-risk.md  07-optimizer.md
analyses/issue-5/: final-report.md
analyses/issue-5/agent-outputs/: 00-orchestrator.md  01-market-research.md  02-plot-analysis.md  03-build-cost.md  04-financing.md  05-risk.md  06-partnership.md  07-optimizer.md
examples/: 01-stangby-beryllen.md  README.md
instructions/: analysis-workflow.md  github-projects-setup.md
partnership/: README.md  agreement-template.md  monthly-report-template.md
skills/: data-sources.md  financial-formulas.md
src/property_investment_planner/: constants.py  run_analysis.py  run_eval.py
templates/: report-template.md
tests/: conftest.py  test_agent_execution.py  test_financial_formulas.py  test_issue_parsing.py
