[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "property-investment-planner"
version = "0.1.0"
description = "GitHub-native AI-driven analyssystem för husbyggnadsinvesteringar"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Investment Planner Contributors" }]
keywords = ["investment", "real-estate", "github-actions", "claude", "sweden"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "PyGithub>=2.3.0",
  "click>=8.1.0",
  "loguru>=0.7.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "mypy>=1.11",
  "ruff>=0.6",
  "types-PyYAML",
]

[project.scripts]
run-analysis = "property_investment_planner.run_analysis:main"
run-eval = "property_investment_planner.run_eval:main"

[project.urls]
Documentation = "https://github.com/REPLACE_WITH_YOUR_REPO"
Repository = "https://github.com/REPLACE_WITH_YOUR_REPO"
Issues = "https://github.com/REPLACE_WITH_YOUR_REPO/issues"

[tool.hatch.build.targets.wheel]
# Only Python code is included in the wheel. Runtime assets (agents/, skills/,
# templates/) are read from the repo checkout at runtime (GitHub Actions) and
# are not needed inside the wheel.
packages = ["src/property_investment_planner"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "agents/",
  "skills/",
  "partnership/",
  "templates/",
  "instructions/",
  ".github/",
  "README.md",
  "SETUP.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  "N",  # pep8-naming
  "D",  # pydocstyle
]
ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"] # no docstring requirements in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["github.*", "anthropic.*"]
ignore_missing_imports = true
